<resources>
    <string name="app_name">My Note</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">Welcome to My Note this is a simple app that allows you to save your notes and records</string>
    <string name="action_logout">LogOut</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">notifications</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="title_profile">Profile</string>

    <string name="sign_out_title">Sign out!</string>
    <string name="sign_out_message">Are you sure to sign out from the Note App?</string>
    <string name="sign_out">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_profile">Edit Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
</resources>
