<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <View
        android:layout_width="360dp"
        android:layout_height="1dp"></View>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/cmments_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_out_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="@string/sign_out_message"
            android:textSize="18dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAction"
        android:layout_width="150dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="-23dp"
        android:background="@drawable/btn_primary_cir_2"
        android:text="@string/sign_out"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</LinearLayout>