<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".screens.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="@drawable/ripple_effect_white"
                android:padding="3dp"
                android:src="@drawable/ic_arrow_back_white_24dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/txtToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/edit_profile"
                android:textColor="@color/colorWhite"
                android:textSize="16dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/generalBgColor"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorWhite"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_change_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center|start"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgUser"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/change_avatar"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"
                        tools:ignore="RtlCompat" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_photo_camera_black_24dp"
                        tools:ignore="RtlCompat" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/generalBgColor" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/full_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"
                        android:layout_marginLeft="16dp" />

                    <EditText
                        android:id="@+id/eTxtName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="16dp"
                        android:text="" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/generalBgColor" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/username"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"
                        android:layout_marginLeft="16dp" />

                    <EditText
                        android:id="@+id/eTxtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="16dp"
                        android:text="" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/generalBgColor" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"
                        android:layout_marginLeft="16dp" />

                    <EditText
                        android:id="@+id/eTxtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="16dp"
                        android:text="" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/generalBgColor" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16dp"
                        android:layout_marginLeft="16dp" />

                    <EditText
                        android:id="@+id/eTxtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="16dp"
                        android:text="" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/generalBgColor" />

            </LinearLayout>

            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/btn_primary_rec"
                android:text="@string/update_profile"
                android:textColor="@color/colorWhite"
                android:textSize="16dp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
